--- a/application/admin/view/index/edit.html
+++ b/application/admin/view/index/edit.html
@@ -7,7 +7,7 @@
 {block name="main"}
 <form method="post">
     <input type="hidden" name="_method" value="PUT">
-    <script id="editor" name="content" type="text/plain" style="width: 1024px; height: 500px;">{$content}</script>
+    <script id="editor" name="content" type="text/plain" style="width: 100%; height: 40em;">{$content}</script>
     <input type="submit" value="保存">
 </form>
 {/block}
