完善后台管理页面

--- a/application/admin/view/index/base.html
+++ b/application/admin/view/index/base.html
@@ -30,6 +30,11 @@
             </aside>
         </div>
         <div class="column">
+            {if (session('?save_ok'))}
+            <div class="notification is-success">
+                {:session('save_ok')}
+            </div>
+            {/if}
             {block name="main"}{/block}
         </div>
     </div>
