--- a/application/admin/view/index/edit.html
+++ b/application/admin/view/index/edit.html
@@ -8,7 +8,7 @@
 <form method="post">
     <input type="hidden" name="_method" value="PUT">
     <script id="editor" name="content" type="text/plain" style="width: 100%; height: 40em;">{$content}</script>
-    <input type="submit" value="保存">
+    <input class="button is-primary" type="submit" value="保存">
 </form>
 {/block}
 {block name="body_append"}
