--- a/application/admin/view/index/edit.html
+++ b/application/admin/view/index/edit.html
@@ -4,6 +4,7 @@
 <script src="/static/dist/ueditor/ueditor.all.min.js"></script>
 <script src="/static/dist/ueditor/lang/zh-cn/zh-cn.js"></script>
 {/block}
+{block name="title"}{$title}{/block}
 {block name="main"}
 <form method="post">
     <input type="hidden" name="_method" value="PUT">
