--- a/application/index/view/index/read.html
+++ b/application/index/view/index/read.html
@@ -1,2 +1,49 @@
-<!-- TODO content page -->
-{$content}
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=1200">
+    <title>起航交大</title>
+    <meta name="description" content="起航交大是面向大一新生的全方位介绍西安交通大学以及报道有关事项的网站，关于交大，你想知道的，都在这里" />
+    <link rel="stylesheet" href="/static/index/css/index.css">
+</head>
+<body>
+    <div class="main">
+        {include file="index/pjax" /}
+    </div>
+    <aside class="sidebar">
+        <div class="sidebar-header">
+            <div class="xjtu-start-here-logo">
+                <img src="/static/index/images/logo/xjtu-start-here.png" alt="起航交大logo" class="logo-img">
+            </div>
+        </div>
+        <div class="sidebar-body">
+            <ul class="menu-ul">
+                {foreach ( config('html.menu') as $name1 => $text)}
+                <li class="menu-li">
+                    <a data-pjax href="/{$name1}.html"{if ($name1 === $name || ($name1 === 'pengkang' && in_array($name, array_keys(config('html.colleges')))))} class="active"{/if}>{$text}</a>
+                </li>
+                {/foreach}
+            </ul>
+        </div>
+        <div class="sidebar-footer">
+            <div class="eeyes-logo-container">
+                <div class="eeyes-logo">
+                    <img src="/static/index/images/logo/eeyes.png" alt="e瞳网logo">
+                </div>
+            </div>
+        </div>
+    </aside>
+    <aside class="qrcode">
+        <div class="qrcode-eeyes">
+            <img class="qrcode-img" src="/static/index/images/qrcode/eeyes.png">
+        </div>
+        <div class="qrcode-xjsu">
+            <img class="qrcode-img" src="/static/index/images/qrcode/xjsu.png">
+        </div>
+    </aside>
+    <script src="/static/dist/js/jquery-3.1.1.min.js"></script>
+    <script src="/static/dist/js/jquery.pjax.min.js"></script>
+    <script src="/static/index/js/index.js"></script>
+</body>
+</html>
