--- a/public/static/index/css/index.css
+++ b/public/static/index/css/index.css
@@ -99,6 +99,11 @@ a {
 
 .main-content {
     padding: 0 14.5%;
+    overflow: hidden;
+}
+
+.main-content img {
+    max-width: 100%;
 }
 
 /* sidebar */
@@ -206,4 +211,70 @@ a {
 
 .eeyes-logo img {
     height: 100%;
+}
+
+/* qrcode */
+
+.qrcode-container {
+    position: fixed;
+    width: 11.6%;
+    right: 0;
+    bottom: 140px;
+    font-size: 0;
+    text-align: center;
+}
+
+.qrcode {
+    display: inline-block;
+    padding-top: 10px;
+    width: 50%;
+    box-sizing: border-box;
+    text-align: center;
+    vertical-align: top;
+    background-color: #ecf0f1;
+}
+
+.qrcode {
+    -webkit-transition-duration: 0.4s;
+    -moz-transition-duration: 0.4s;
+    -o-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+    -webkit-transform-origin: 100% 100%;
+    -moz-transform-origin: 100% 100%;
+    -ms-transform-origin: 100% 100%;
+    -o-transform-origin: 100% 100%;
+    transform-origin: 100% 100%;
+}
+
+.qrcode:hover {
+    -webkit-transform: scale(2.5);
+    -moz-transform: scale(2.5);
+    -ms-transform: scale(2.5);
+    -o-transform: scale(2.5);
+    transform: scale(2.5);
+}
+
+.qrcode-img {
+    width: 90%;
+}
+
+.qrcode-text {
+    font-size: 8px;
+}
+
+/* footer */
+
+.footer {
+    padding-left: 20%;
+}
+
+.footer-sponsor {
+    margin: 5em 0 1em;
+    color: #4c4c4c;
+    font-size: .8em;
+    text-align: center;
+}
+
+.footer-sponsor span {
+    display: inline-block;
 }
