侧边栏改为vh定位，修改e瞳logo，前端基本完成

--- a/application/index/view/index/read.html
+++ b/application/index/view/index/read.html
@@ -28,10 +28,10 @@
             </ul>
         </div>
         <div class="sidebar-footer">
-            <div class="eeyes-logo-container">
-                <div class="eeyes-logo">
+            <div class="eeyes-logo">
+                <a href="http://www.eeyes.net/">
                     <img src="/static/index/images/logo/eeyes.png" alt="e瞳网logo">
-                </div>
+                </a>
             </div>
         </div>
     </aside>
