--- a/public/static/index/css/index.css
+++ b/public/static/index/css/index.css
@@ -115,8 +115,7 @@ a {
     left: 0;
     top: 0;
     bottom: 0;
-    background-color: #2980b9;
-    background-image: url(../images/sidebar-bg.png);
+    background: #2980b9 url(../images/sidebar-bg.jpg);
     background-size: cover;
 }
 
