--- a/application/admin/view/index/edit.html
+++ b/application/admin/view/index/edit.html
@@ -4,11 +4,11 @@
 <script src="/static/dist/ueditor/ueditor.all.min.js"></script>
 <script src="/static/dist/ueditor/lang/zh-cn/zh-cn.js"></script>
 {/block}
-{block name="title"}{$title}{/block}
+{block name="title"}{$post->type->name} / {$post->name}{/block}
 {block name="main"}
 <form method="post">
     <input type="hidden" name="_method" value="PUT">
-    <script id="editor" name="content" type="text/plain" style="width: 100%; height: 40em;">{$content}</script>
+    <script id="editor" name="content" type="text/plain" style="width: 100%; height: 40em;">{$post->content}</script>
     <input class="button is-primary" type="submit" value="保存">
 </form>
 {/block}
