PC端重构完成

--- a/application/index/view/index/headers/banner.html
+++ b/application/index/view/index/headers/banner.html
@@ -1,1 +1,1 @@
-<img class="main-header-img" src="/static/index/images/banner/{$name}.jpg" alt="横幅图">
+<img class="main-header-img" src="/static/index/images/banner/{$post->id}.jpg" alt="横幅图">
