--- a/application/index/view/index/pjax.html
+++ b/application/index/view/index/pjax.html
@@ -1,10 +1,10 @@
 <div class="main-header">
-    {if ( in_array($name, array_keys(config('html.colleges'))))}
+    {if ($post->isCollege())}
     {include file="index/headers/colleges" /}
     {else /}
     {include file="index/headers/banner" /}
     {/if}
 </div>
 <main class="main-content">
-    {$content}
+    {$post->content}
 </main>
