--- a/application/mobile/view/index/colleges.html
+++ b/application/mobile/view/index/colleges.html
@@ -1,16 +1,17 @@
 <ul class="main-content-colleges-ul">
-    {foreach ( config('html.colleges') as $name1 => $text)}
+    <?php $college_posts = \app\common\model\Post::allCollegeOfType('mobile'); ?>
+    {foreach ($college_posts as $college_post)}
     <li class="main-content-college-li">
         <div class="main-content-college">
             <div class="main-content-college-logo">
-                <img class="main-content-college-logo-img" src="/static/mobile/images/college-logo/{$name1}.png" alt="{$text}书院logo">
+                <img class="main-content-college-logo-img" src="/static/mobile/images/college-logo/{$college_post->id}.png" alt="{$college_post->name}logo">
             </div>
             <div class="main-content-college-body">
-                <a data-pjax href="/mobile/{$name1}.html">
-                    <h2 class="main-content-college-title">{$text}书院</h2>
-                    <p class="main-content-college-text">{$text}书院</p>
+                <a data-pjax href="{:url('mobile/Index/read', ['id' => $college_post->id])}">
+                    <h2 class="main-content-college-title">{$college_post->name}</h2>
+                    <p class="main-content-college-text">{$college_post->content|html_to_text|substr=0,100|htmlentities}</p>
                 </a>
-                <a class="main-content-college-link" href="/mobile/{$name1}.html">{$text}书院</a>
+                <a class="main-content-college-link" href="{$college_post->link|htmlentities}">官网链接：{$college_post->link|htmlentities}</a>
             </div>
         </div>
     </li>
