新增移动端图片lazyload，整理data.php数据

--- a/application/mobile/view/index/index.html
+++ b/application/mobile/view/index/index.html
@@ -1,14 +1,14 @@
 <div class="main-content-index">
     <div class="main-content-index-help">
-        <img src="/static/mobile/images/index/help.png" alt="帮助" style="width: 100%; height: 100%;">
+        <img src="/static/mobile/images/index/help.png" alt="帮助">
     </div>
     <div class="swiper-container main-content-index-swiper">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
-                <img src="/static/mobile/images/index/bg-01.jpg" alt="">
+                <img src="/static/mobile/images/index/bg-01.jpg" alt="背景图01">
             </div>
             <div class="swiper-slide">
-                <img src="/static/mobile/images/index/bg-02.jpg" alt="">
+                <img src="/static/mobile/images/index/bg-02.jpg" alt="背景图02">
             </div>
         </div>
         <div class="swiper-pagination"></div>
