--- a/application/mobile/view/index/base.html
+++ b/application/mobile/view/index/base.html
@@ -85,6 +85,7 @@
     <script src="/static/dist/js/jquery-3.1.1.min.js"></script>
     <script src="/static/dist/js/jquery.pjax.min.js"></script>
     <script src="/static/dist/js/swiper-3.4.2.jquery.min.js"></script>
+    <script src="/static/dist/js/jquery.lazyload.min.js"></script>
     <script src="/static/mobile/js/mobile.js"></script>
 </body>
 </html>
