--- a/public/static/mobile/css/mobile.css
+++ b/public/static/mobile/css/mobile.css
@@ -310,6 +310,11 @@ body {
     z-index: 9999;
 }
 
+.main-content-index-help img {
+    width: 100%;
+    height: 100%;
+}
+
 .swiper-slide img {
     width: 100%;
     height: 100%;
