新增：PC端背景音乐

--- a/application/index/view/index/base.html
+++ b/application/index/view/index/base.html
@@ -15,7 +15,7 @@
     <aside class="sidebar">
         <div class="sidebar-header">
             <div class="xjtu-start-here-logo">
-                <a data-pjax href="/">
+                <a data-pjax href="{:url('index/Index/index')}">
                     <img src="/static/index/images/logo/xjtu-start-here.png" alt="起航交大logo" class="logo-img">
                 </a>
             </div>
@@ -34,6 +34,14 @@
             <div class="eeyes-logo">
                 <a href="http://www.eeyes.net/">
                     <img src="/static/index/images/logo/eeyes.png" alt="e瞳网logo">
+                </a>
+            </div>
+            <div class="bgm">
+                <audio class="bgm-audio" src="/static/index/media/xjtu-i-love-you.mp3" autoplay="autoplay" loop="loop">您的浏览器不支持音频播放</audio>
+                <a class="bgm-button" href="javascript:">
+                    <img class="bgm-button-img" src="/static/index/images/bgm/sound-on.png"
+                         data-src-on="/static/index/images/bgm/sound-on.png"
+                         data-src-off="/static/index/images/bgm/sound-off.png">
                 </a>
             </div>
         </div>
