新增：移动端滑动手势打开关闭菜单

--- a/application/mobile/view/index/base.html
+++ b/application/mobile/view/index/base.html
@@ -86,6 +86,7 @@
     <script src="/static/dist/js/jquery.pjax.min.js"></script>
     <script src="/static/dist/js/swiper-3.4.2.jquery.min.js"></script>
     <script src="/static/dist/js/jquery.lazyload.min.js"></script>
+    <script src="/static/dist/js/jquery.touchSwipe.min.js"></script>
     <script src="/static/mobile/js/mobile.js"></script>
 </body>
 </html>
