--- a/application/mobile/view/index/colleges.html
+++ b/application/mobile/view/index/colleges.html
@@ -9,7 +9,7 @@
             <div class="main-content-college-body">
                 <a data-pjax href="{:url('mobile/Index/read', ['id' => $college_post->id])}">
                     <h2 class="main-content-college-title">{$college_post->name}</h2>
-                    <p class="main-content-college-text">{$college_post->content|html_to_text|substr=0,100|htmlentities}</p>
+                    <p class="main-content-college-text">{$college_post->content|html_to_text|mb_substr=0,100|htmlentities}</p>
                 </a>
                 <a class="main-content-college-link" target="_blank" href="{$college_post->link|htmlentities}">官网链接：{$college_post->link|htmlentities}</a>
             </div>
