调整后台管理样式和UEditor默认样式

--- a/application/admin/view/login/loginForm.html
+++ b/application/admin/view/login/loginForm.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>登录起航交大后台管理</title>
     <link rel="stylesheet" href="/static/dist/css/bulma.min.css">
     <style>
@@ -28,7 +29,7 @@
                         </p>
                     </div>
                     <div class="field">
-                        <label class="label">Password</label>
+                        <label class="label">密码</label>
                         <p class="control">
                             <input class="input" type="password" name="password">
                         </p>
