--- a/application/admin/view/index/base.html
+++ b/application/admin/view/index/base.html
@@ -7,7 +7,7 @@
     {block name="head_append"}{/block}
 </head>
 <body>
-    <div class="columns is-desktop">
+    <div class="columns">
         <div class="column is-2">
             <div class="box">
                 <aside class="menu">
@@ -35,7 +35,7 @@
                 </aside>
             </div>
         </div>
-        <div class="column">
+        <div class="column is-10">
             <h1 class="title">
                 {block name="title"}请从左侧列表选择文章编辑{/block}
             </h1>
