--- a/application/admin/view/index/edit.html
+++ b/application/admin/view/index/edit.html
@@ -1,5 +1,11 @@
 {extend name="index/base" /}
 {block name="head_append"}
+<style>
+    #editor.mobile {
+        width: 500px;
+        max-width: 100%;
+    }
+</style>
 <script src="/static/dist/ueditor/ueditor.config.js"></script>
 <script src="/static/dist/ueditor/ueditor.all.min.js"></script>
 <script src="/static/dist/ueditor/lang/zh-cn/zh-cn.js"></script>
@@ -8,7 +14,7 @@
 {block name="main"}
 <form method="post">
     <input type="hidden" name="_method" value="PUT">
-    <script id="editor" name="content" type="text/plain" style="width: 100%; height: 40em;">{$post->content}</script>
+    <script class="{$post->type->id}" id="editor" name="content" type="text/plain">{$post->content}</script>
     <input class="button is-primary" type="submit" value="保存">
 </form>
 {/block}
