--- a/public/static/index/css/index.css
+++ b/public/static/index/css/index.css
@@ -104,7 +104,10 @@ a {
 }
 
 .main-content img {
-    max-width: 100%;
+    display: block;
+    margin: 0 auto;
+    max-width: 100% !important;
+    text-align: center;
 }
 
 /* sidebar */
