2017版页面精简
PC端：
删除主页菜单下logo和背景音乐
删除主页右下角二维码
删除学生会支持信息
移动端：
删除首页帮助页面
修改首页图片
修改标题栏
删除学生会二维码和支持信息

--- a/application/index/view/index/base.html
+++ b/application/index/view/index/base.html
@@ -30,34 +30,9 @@
                 {/foreach}
             </ul>
         </div>
-        <div class="sidebar-footer">
-            <div class="eeyes-logo">
-                <a href="http://www.eeyes.net/">
-                    <img src="/static/index/images/logo/eeyes.png" alt="e瞳网logo">
-                </a>
-            </div>
-            <div class="bgm">
-                <audio class="bgm-audio" src="/static/index/media/xjtu-i-love-you.mp3" autoplay="autoplay" loop="loop">您的浏览器不支持音频播放</audio>
-                <a class="bgm-button" href="javascript:">
-                    <img class="bgm-button-img" src="/static/index/images/bgm/sound-on.png"
-                         data-src-on="/static/index/images/bgm/sound-on.png"
-                         data-src-off="/static/index/images/bgm/sound-off.png">
-                </a>
-            </div>
-        </div>
-    </aside>
-    <aside class="qrcode-container">
-        <div class="qrcode">
-            <img class="qrcode-img" src="/static/index/images/qrcode/eeyes.png">
-            <p class="qrcode-text">西安交通大学e瞳网</p>
-        </div>
-        <div class="qrcode">
-            <img class="qrcode-img" src="/static/index/images/qrcode/xjsu.png">
-            <p class="qrcode-text">西安交通大学学生会</p>
-        </div>
     </aside>
     <footer class="footer">
-        <p class="footer-sponsor"><span>西安交通大学招生办</span> <span>西安交通大学学生会</span></p>
+        <p class="footer-sponsor"><span>西安交通大学招生办</span></p>
         {include file="common@common/eeyes_common_footer" /}
     </footer>
     <script src="/static/dist/js/jquery-3.1.1.min.js"></script>
