--- a/application/mobile/view/index/base.html
+++ b/application/mobile/view/index/base.html
@@ -11,16 +11,16 @@
 <body>
     <header class="header">
         <div class="header-left">
-            <a href="javascript:history.back();">
+            <a href="//www.eeyes.net" target="_blank">
                 <div class="header-icon-container">
-                    <img class="header-icon" src="/static/mobile/images/icon/back.png" alt="后退">
+                    <img class="header-icon" src="/static/mobile/images/icon/eeyes.png" alt="e瞳网logo">
                 </div>
             </a>
         </div>
         <div class="header-center">
             <a data-pjax href="{:url('mobile/Index/index')}">
                 <div class="header-icon-container">
-                    <img class="header-icon" src="/static/mobile/images/icon/eeyes.png" alt="e瞳网logo">
+                    <h1 class="header-title">起航交大</h1>
                 </div>
             </a>
         </div>
@@ -58,19 +58,11 @@
                         <img class="qrcode-img" src="/static/mobile/images/qrcode/eeyes.jpg">
                         <p class="qrcode-text">西安交通大学e瞳网</p>
                     </div>
-                    <div class="qrcode">
-                        <img class="qrcode-img" src="/static/mobile/images/qrcode/xjsu.jpg">
-                        <p class="qrcode-text">西安交通大学学生会</p>
-                    </div>
                 </div>
                 <ul class="sponsor-ul">
                     <li class="sponsor-li">
                         <img class="sponsor-icon" src="/static/mobile/images/icon/sponsor.png" alt="支持">
                         <span class="sponsor-text">西安交通大学招生办</span>
-                    </li>
-                    <li class="sponsor-li">
-                        <img class="sponsor-icon" src="/static/mobile/images/icon/sponsor.png" alt="支持">
-                        <span class="sponsor-text">西安交通大学学生会</span>
                     </li>
                 </ul>
             </div>
