--- a/public/static/mobile/css/mobile.css
+++ b/public/static/mobile/css/mobile.css
@@ -40,7 +40,7 @@ body {
 }
 
 .header-left .header-icon {
-    width: 12px;
+    width: 66px;
 }
 
 .header-center {
@@ -51,8 +51,11 @@ body {
     text-align: center;
 }
 
-.header-center .header-icon {
-    width: 65px;
+.header-title {
+    font-family: "";
+    font-size: 22px;
+    font-weight: normal;
+    line-height: 1;
 }
 
 .header-right {
@@ -183,6 +186,7 @@ body {
 
 .qrcode {
     display: inline-block;
+    margin: 0 auto;
     width: 50%;
     box-sizing: border-box;
     text-align: center;
@@ -303,20 +307,6 @@ body {
 }
 
 /* main-content-index */
-
-.main-content-index-help {
-    position: fixed;
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 9999;
-}
-
-.main-content-index-help img {
-    width: 100%;
-    height: 100%;
-}
 
 .swiper-slide img {
     width: 100%;
