--- a/application/index/view/index/read.html
+++ b/application/index/view/index/read.html
@@ -1,2 +1,2 @@
 {extend name="index/base" /}
-{block name="main"}{include file="index/pjax" /}{/block}
+{block name="main"}{include file="index/post" /}{/block}
