--- a/application/mobile/view/index/base.html
+++ b/application/mobile/view/index/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>起航交大</title>
+    <title>{block name="title"}{notempty name="title"}{$title} - {/notempty}起航交大{/block}</title>
     <link rel="stylesheet" href="/static/mobile/css/mobile.css">
     <link rel="stylesheet" href="/static/common/css/eeyes_common.css">
     <link rel="stylesheet" href="/static/dist/css/swiper-3.4.2.min.css">
